force-app/main/default/objects/Google_Drive_Integration_Configurations__mdt/Google_Drive_Integration_Configurations__mdt.object-meta.xml
<CustomObject>
    <description>This has been created in order to store environment related configurations for Google Drive Integration Project.</description>
    <label>Google Drive Integration Configuration</label>
    <pluralLabel>Google Drive Integration Configurations</pluralLabel>
</CustomObject>