force-app/main/default/objects/Google_Drive_Integration_Configurations__mdt/fields/Access_token__c.field-meta.xml
<CustomField>
    <fullName>Access_token__c</fullName>
    <label>Access token</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>