force-app/main/default/objects/Google_Drive_Integration_Configurations__mdt/fields/Mulesoft_API_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>Mulesoft_API_Email_Address__c</fullName>
    <label>Mulesoft API Email Address</label>
    <required>true</required>
    <type>Email</type>
</CustomField>