force-app/main/default/objects/Google_Drive_Integration_Configurations__mdt/fields/Mulesoft_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Mulesoft_API_Name__c</fullName>
    <description>This name will be shown in &quot;Google Drive&quot; tab/comp in &quot;Updated By&quot; column for all files/folders which have been created/updated by Muleosft API.</description>
    <label>Mulesoft API Name(To show in GD Comp)</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>