force-app/main/default/objects/Google_Drive_Integration_Configurations__mdt/fields/Parent_Folder_GD_Id__c.field-meta.xml
<CustomField>
    <fullName>Parent_Folder_GD_Id__c</fullName>
    <description>This will contain the Google drive Ref for the parent folder &apos;Salesforce.com&apos;</description>
    <label>Parent Folder Google Drive Ref</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>