force-app/main/default/objects/Google_Drive_Integration_Configurations__mdt/fields/Read_only_folders_Account__c.field-meta.xml
<CustomField>
    <fullName>Read_only_folders_Account__c</fullName>
    <label>Hidden folders(Account)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>